syntax = "proto3";

package app;

// Declare a service for each controller you have
service AppController {
  // Declare an rpc for each method that is called via gRPC
  rpc Accumulate (NumberArray) returns (SumOfNumberArray);
  rpc GetSingleUser (IdUser) returns (UserData);

}

// Declare the types used above
message NumberArray {
  repeated double data = 1;
}

message SumOfNumberArray {
  double sum = 1;
}


message IdUser {
  int32 id = 1;
}

message UserData {
  optional string name = 1;
   optional int32 id = 2;
   optional string email = 3;
}